# auth-module-poc

./: .gitignore  Cargo.toml
circuits/: address_proof.circom  jwt-digest.js  script-runner.sh
keys-manager/: Cargo.toml
keys-manager/src/: eph_key_generator.rs  lib.rs  rsa_generator.rs  types.rs
spice-guard/: Cargo.toml
spice-guard/src/: lib.rs  spice_creator.rs
src/: main.rs
zk-prover-verifier-service/: Cargo.toml
zk-prover-verifier-service/src/: address_proof.r1cs  address_proof.wasm  lib.rs  verification_key.json
