[package]
name = "user-keys-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek={version="2.1.1",features=['rand_core']}
rand="0.8.0"
blake2 = "0.10.6"
sp-core="35.0.0"
rsa = {version="0.9.7",features=['sha2']}                
hex = "0.4"             
light-poseidon = "0.3.0"
ark-bn254 = { version = "0.5.0" }
num-bigint = "0.4.6"
sha2 = "0.10.8"
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel", "asm"] }
curve25519-dalek = "4"
