[package]
name = "zk-prover-verifier-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.4.2", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-circom = {git = "https://github.com/gakonst/ark-circom.git"}

# decoding of data
hex = "0.4.3"
byteorder = "1.4.3"
rsa = {version="0.9.7",features=['sha2']}                
num-bigint = { version = "0.4", features = ["rand"] }

color-eyre = "0.6.2"
cfg-if = "1.0.0"
tokio = { version = "1.29.1", features = ["macros"] }
serde_json = {version="1.0.138"}
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
hex-literal = "0.4.1"
